dist/pdns-admin/Deployment.pdns-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: pdns-admin
  name: pdns-admin
  namespace: pdns-admin
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: pdns-admin-app-pdns-admin-app-deployment-c878a4f5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pdns-admin
        cdk8s.io/metadata.addr: pdns-admin-app-pdns-admin-app-deployment-c878a4f5
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: OIDC_OAUTH_ENABLED
              value: "False"
            - name: SQLALCHEMY_DATABASE_URI
              value: sqlite:////data/powerdns-admin.db
          image: powerdnsadmin/pda-legacy:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: ""
              port: 80
              scheme: HTTP
            timeoutSeconds: 5
          name: pdns-admin
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: ""
              port: 80
              scheme: HTTP
            timeoutSeconds: 5
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /data
              name: pvc-app-config
      dnsPolicy: ClusterFirst
      hostNetwork: false
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-app-config
          persistentVolumeClaim:
            claimName: app-config
            readOnly: false
