dist/pdns-admin/Ingress.pdns-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: pdns-admin
  namespace: pdns-admin
spec:
  rules:
    - host: pdns-admin.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: pdns-admin
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: dnsadmin.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: pdns-admin
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pdns-admin.cmdcentral.xyz
        - dnsadmin.cmdcentral.xyz
      secretName: pdns-admin-tls
